# tcp-file-server

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: client.cpp  server.cpp
src/commands/: commandType.h
src/network/: errors.h  reader.cpp  reader.h  socket.cpp  socket.h  tcpClient.cpp  tcpClient.h  tcpServer.cpp  tcpServer.h  tcpSocket.cpp  tcpSocket.h  writer.cpp  writer.h
